<resources>
    <string name="app_name">Soundbite App</string>
    <string name="breakfast_name">Breakfast</string>
    <string name="lunch_name">Lunch</string>
    <string name="dinner_name">Dinner</string>
    <string name="text_col">Collapsed</string>
    <string name="text_exp">Expanded</string>
    <string name="Logo">Logo</string>
    <string name="Settings">Setting Logo</string>
    <string name="nameLogo">Logo Name</string>
    <string name="welcome">Logged In As Guest</string>
    <string name="btnLogin">Login</string>
    <string name="features">Login to gain access: \n - Statistics \n - Recent Meals \n - Favourites</string>
    <string name="usernameLabel">Username: </string>
    <string name="textUsername">Email Address</string>
    <string name="passwordLabel">Password: </string>
    <string name="textPassword">Password</string>
    <string name="noAccount">Haven\&#39;t got an account?</string>
    <string name="forgotPassword">Forgot your password?</string>
    <string name="clickhere">Click Here</string>
    <string name="btnSubmit">Submit</string>
    <string name="firstName">First Name:</string>
    <string name="email">Email: </string>
    <string name="ageText">Age: </string>
    <string name="btnCancel">Cancel</string>
    <string name="nameError">(!) Name Is Mandatory</string>
    <string name="blank"></string>
    <string name="hintName">Steve</string>
    <string name="hintEmail">Steve@example.co.uk</string>
    <string name="hintPassword">*********</string>
    <string name="emailError">(!) Email Is Mandatory</string>
    <string name="emailPattern">(!) Valid Email Required</string>
    <string name="passwordError">(!) Password length needs to be greater than 8 characters long</string>
    <string name="passwordEmpty">(!) Enter Password</string>
    <string-array name="string_array_breakfast">
        <item>Cereal</item>
        <item>Toast</item>
        <item>Fruit</item>
    </string-array>

    <string-array name="string_array_lunch">
        <item>Sandwiches</item>
        <item>Pasta</item>
        <item>Salad</item>
    </string-array>

    <string-array name="string_array_dinner">
        <item>Pizza</item>
        <item>Curry</item>
        <item>Chicken and Chips</item>
    </string-array>


</resources>
